[metadata]
name = AoC2020
description = Lyons Advent of Code 2020 Library
author = Alexander Lyons
license = MIT
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programing Language :: Python :: 3
    Programing Language :: Python :: 3 :: Only
    Programing Language :: Python :: 3.8
    Programing Language :: Python :: 3.9
    Programing Language :: Python :: 3.10

[options]
packages = 
    AoC2020
python_requires = >=3.8
package_dir =
    =src
zip_safe = no
  
[options.extras_require]
testing = 
    pytest>=6.0
    pytest-cov>=2.0
    flake8>=3.9
    tox>=3.24

[options.package_data]
aoc_2020 = py.typed

[flake8]
max-line-length = 160
