[metadata]
name = AoC2021
description = Lyons Advent of Code 2021 Library
author = Alexander Lyons
license = MIT
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programing Language :: Python :: 3
    Programing Language :: Python :: 3 :: Only
    Programing Language :: Python :: 3.10

[options]
python_requires = >=3.10
package_dir =
    =src
packages=find:
zip_safe = no
  
[options.extras_require]
testing = 
    pytest>=6.0
    pytest-cov>=2.0
    flake8>=3.9
    tox>=3.24

[options.packages.find]
where=src

[options.package_data]
aoc_2021 = py.typed

[flake8]
max-line-length = 160
